@@ -1,3 +1,8 @@
+Wed Oct  5 03:24:55 2016  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
+
+	* enum.c: Make Enumerable#chunk with no block return
+	  an Enumerator [#2172]
+
 Wed Oct  5 01:19:45 2016  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* internal.h (ST2FIX): new macro to convert st_index_t to Fixnum.
